build/project/sgyt-prueba-web/.argocd/service.yml

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sgyt-prueba-web
  name: sgyt-prueba-web
  namespace: frontend

spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sgyt-prueba-web
